# bankfetch

./: .gitignore  LICENSE  README.md  bankfetch_specification_v_1.md  pyproject.toml
examples/: config.yaml
src/bankfetch/: auth.py  balances.py  cli.py  config.py  enable_client.py  errors.py  exit_codes.py  locking.py  logging.py  models.py  session_store.py  sync.py  transactions.py  utils.py
tests/: conftest.py  test_cli.py  test_config.py  test_normalization.py  test_storage_and_locking.py  test_transactions.py
